@@ -1,4 +1,7 @@
 #!perl -T
+
+# $Id: 02-cache.t 34 2013-03-14 14:51:02Z sysdef $
+
 use 5.006;
 use strict;
 use warnings FATAL => 'all';
@@ -9,9 +12,11 @@ plan tests => 1;
 BEGIN {
     ok(
         eval {
-            # create cache directory
-            my $username = $ENV{LOGNAME} || $ENV{USER} || getpwuid($<);
+            my $username;
+            eval { $username = $ENV{LOGNAME} || $ENV{USER} || getpwuid($<); };
             my $cache_dir = '/var/cache/www-klicktel-api/';
+
+            # create cache directory
             if ( $username ne 'root' ) {
                 $cache_dir = '/home/' . $username . '/.klicktel/cache/';
                 mkdir '/home/' . $username . '/.klicktel'
@@ -19,9 +24,9 @@ BEGIN {
             }
             if ( !-d $cache_dir ) {
                 mkdir $cache_dir
-                    or die("cannot create cache dir '$cache_dir'.");
+                    or BAIL_OUT("cannot create cache dir '$cache_dir': $!");
                 chmod '0111', $cache_dir
-                    or die("cannot chmod cache dir '$cache_dir'.");
+                    or BAIL_OUT("cannot chmod cache dir '$cache_dir': $!");
             }
             return 1 if -w $cache_dir;
             return 0;
